Eclipse Projects: Updated documentation.